# task-flow

./: .dockerignore  .gitignore  AGENTS.md  README.md  deployment.md  docker-compose.minio.yml  docker-compose.yml
api-service/: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
api-service/app/: main.py
api-service/app/api/: dependencies.py  middleware.py  rate_limit.py
api-service/app/api/routes/: health.py  (+4 more)
api-service/app/core/: config.py
api-service/app/db/: session.py
api-service/app/schemas/: task.py  upload.py
api-service/app/services/: migration_runner.py  publisher.py  rate_limiter.py  storage.py  task_service.py
api-service/migrations/: env.py  script.py.mako
api-service/migrations/versions/: 0001_create_tasks.py
api-service/tests/: conftest.py  fakes.py  test_config.py  test_frontend.py  test_health.py  test_migration_runner.py  test_rate_limiter.py  test_storage.py  test_tasks.py
worker-service/: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
worker-service/app/: __init__.py  main.py  schemas.py
worker-service/app/api/: __init__.py
worker-service/app/consumers/: __init__.py  task_consumer.py
worker-service/app/core/: __init__.py  config.py
worker-service/app/db/: __init__.py  session.py
worker-service/app/handlers/: __init__.py  merge_pdfs.py  resize_image.py  send_email.py  summarize_pdf.py
worker-service/app/services/: __init__.py  email_sender.py  pdf_summary.py  storage.py  task_executor.py
worker-service/tests/: conftest.py  test_consumer.py  test_email_sender.py  test_executor.py  test_health.py  test_storage.py
(+71 files in other folders)
